fix(left): folder 사용 안내 레이아웃 어긋나는 현상 수정   - Folder 사용 안내 레이어 일어, 중국어 일 때 영역 벗어나는 현상 수정   - Folder collapse 애니메이션 동작 중 업데이트 lock 추가

--- a/client/app/left/topics/folder/topic.folder.css
+++ b/client/app/left/topics/folder/topic.folder.css
@@ -145,9 +145,9 @@
   white-space: nowrap;
 }
 .topic-folder-title-text input {
-  margin:0;
   padding: 0;
   width: 120px;
+  height: 20px;
   line-height:20px;
   outline: 0;
   border: 1px solid #8CC0E6;
